=========
 Changes
=========

Here you can see the list of changes between each Holocron release.


0.4.0 (unreleased)
==================


0.3.0 (2016-03-12)
==================

- Added API for registering external themes. That means from now on themes
  could be distributed as Holocron extensions via Python packaged.
- Added User Theme extension that allows to setup external theme.
- Fixed posts ordering on index and tags pages.
- Fixed broken ribbon, so it’s clickable again.
- **DEPRECATED**: ``paths.theme`` option will be removed in favor of
  ``ext.user-theme.path``
- **DEPRECATED**: user theme won't be enabled by default, so please enable
  it explicitly


0.2.0 (2015-12-16)
==================

- Added reStructuredText converter.
- Added ``holocron.ext.abc.Extension`` interface.
- Added Python 3.5 support.
- Added Twitter Cards support.
- Fixed Markdown title parser for documents with multiple <h1> titles..
- Fixed security issue when content author may steal private data through
  content's meta header.
- Fixed YAML header parser for documents with multiple ``---`` signs.
- Fixed rebuilding of HTML produced by Tags and Feed extensions.
- Default theme is more responsive for smartphones & tablets now.


0.1.1 (2015-08-22)
==================

- ``tests`` package is no longer installed.
- ``holocron.theme`` data is now installed by setuptools.


0.1.0 (2015-08-22)
==================

- First public release.