@@ -1,6 +1,6 @@
 {#-
-    holocron/theme/templates/base.html
-    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    holocron/theme/templates/base.js
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
     Base template for Holocron's default theme.
 
@@ -56,4 +56,4 @@
   <a href="{{ theme.ribbon.link }}" class="ribbon">{{ theme.ribbon.text }}</a>
   {% endif %}
 
-{% include 'counters.html' %}
+{% include 'counters.j2' %}
