@@ -1,6 +1,6 @@
 {#-
-    holocron/theme/templates/counters.html
-    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    holocron/theme/templates/counters.j2
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
     Mixin for adding stat counters for popular services.
 
