@@ -1,6 +1,6 @@
 {#-
-    holocron/theme/templates/document-list.html
-    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    holocron/theme/templates/document-list.j2
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
     Template for rendering Holocron index pages.
 
@@ -8,7 +8,7 @@
     :license: 3-clause BSD, see LICENSE for details.
 -#}
 
-{% extends "base.html" %}
+{% extends "base.j2" %}
 
 
 {% block content %}
