@@ -1,6 +1,6 @@
 {#-
-    holocron/theme/templates/post.html
-    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    holocron/theme/templates/post.j2
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
     Default template for rendering Holocron posts.
 
@@ -8,7 +8,7 @@
     :license: 3-clause BSD, see LICENSE for details.
 -#}
 
-{% extends "page.html" %}
+{% extends "page.j2" %}
 
 
 {% block article_meta %}
